@@ -1,0 +1,13 @@
+require 'pathname'
+
+module Require
+  module Dir
+    def self.relative_path(base_path, path)
+      path.gsub! /#{Regexp.escape base_path}/ 
+      p1 = Pathname.new base_path
+      p2 = p1 + path
+      p4 = p2.relative_path_from(p1)  # Pathname:lib/ruby/1.8    
+    end
+  end
+end
+  
