@@ -1,7 +1,0 @@
-require File.expand_path(File.dirname(__FILE__) + '/spec_helper')
-
-describe "RequireMagic" do
-  it "fails" do
-    fail "hey buddy, you should probably rename this file and start specing for real"
-  end
-end
